@@ -1,3 +1,9 @@
+2025-03-04 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/SDCCralloc.hpp,
+	  src/stm8/gen.c:
+	  Improve some comments about the stm8 division hardware bug workaround.
+
 2025-03-03 Gabriele Gorla <gorlik@yahoo.com>
 
     * src/mos6502/gen.c:
